fix bottom gap

--- a/source/css/_layout/main.styl
+++ b/source/css/_layout/main.styl
@@ -1,5 +1,5 @@
 .safearea
-  margin: $gap
+  margin: $gap $gap 0
 .l_body
   position: relative
   if hexo-config('custom_css.font_smoothing') == true
